# azure-pipeline-templates

./: .pre-commit-config.yaml  azure-pipeline.yaml  changelog.md  pyproject.toml  readme.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: renovate.json
python/: install-peotry-project.yaml  install-poetry-project.yaml  pre-commit.yaml
