[tool.poetry]
name = "azure-pipeline-templates"
version = "0.1.0"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pre-commit = { version = "==2.4.0", optional = true}
requests = "2.23.0"

[tool.poetry.extras]
pre_commit = [
  'pre-commit',
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
